# paid-engine-x-api

./: .env.example  .gitignore  CREATIVE_ENGINE_X_EXTRACTION_AUDIT.md  Dockerfile  PAIDEDGE_AGENT_OPS-2.md  PaidEdge_Backend_Spec-2-3.md  PaidEdge_Frontend_Spec-2.md  PaidEdge_PRD-2.md  product-definition.md  pyproject.toml  railway.toml
.github/workflows/: ci.yml
app/: config.py  dependencies.py  main.py
app/analytics/: models.py  router.py
app/assets/: context.py  generation_router.py  models.py  router.py  service.py  storage.py  test_content.py  test_render.py  validators.py
app/attribution/: models.py  router.py
app/audiences/: export.py  linkedin_push.py  meta_push.py  models.py  router.py  service.py
app/auth/: google_ads.py  linkedin.py  middleware.py
app/campaigns/: models.py  router.py
docs/: DUBCO_API_REFERENCE.md  GOOGLE_ADS_API_REFERENCE.md  LINKEDIN_MARKETING_API_REFERENCE.md  META_MARKETING_API_REFERENCE.md
migrations/: 003_crm_tables.sql  004_usage_events.sql
tests/: conftest.py  test_ad_platform_sync.py  test_analytics_router.py  test_attribution_router.py  test_audience_export.py  test_audiences_crud.py  test_crm_clickhouse.py  test_crm_models.py  test_crm_supabase.py  test_data_engine_x.py  test_dubco.py  test_google_ads_audience_push.py  test_google_ads_auth.py  test_google_ads_client.py  test_google_ads_customer_match.py  test_google_ads_metrics_sync.py  test_google_ads_pmax.py  test_hubspot_crm_sync.py  test_hubspot_engine_x.py  test_landing_pages.py  test_linkedin_analytics.py  test_linkedin_audiences.py  test_linkedin_auth.py  test_linkedin_creatives.py  test_linkedin_leads.py  test_meta_adsets.py  test_meta_audience_push.py  test_meta_audiences.py  test_meta_client.py  test_meta_creatives.py  test_meta_metrics.py  test_usage.py
trigger/: ad_platform_sync.py  google_ads_metrics_sync.py  hubspot_crm_sync.py  linkedin_lead_sync.py  linkedin_metrics_sync.py
(+77 files in other folders)
