[project]
name = "paid-engine-x-api"
version = "0.1.0"
description = "paid-engine-x API — FastAPI + Supabase + ClickHouse"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.34,<1",
    "pydantic[email]>=2.7,<3",
    "pydantic-settings>=2.7,<3",
    "supabase>=2.13,<3",
    "clickhouse-connect>=0.8,<1",
    "PyJWT[crypto]>=2.8.0,<3",
    "python-multipart>=0.0.18",
    "httpx>=0.28,<1",
    "jinja2>=3.1,<4",
    "reportlab>=4.1,<5",
    "python-pptx>=1.0,<2",
    "anthropic>=0.40,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.25,<1",
    "httpx>=0.28,<1",
    "ruff>=0.9,<1",
]

[tool.setuptools.packages.find]
include = ["app*", "trigger*"]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
